--- a/Day2LinearRegression.ipynb
+++ b/Day2LinearRegression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Day2LinearRegression.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNcLqLR2jyvDGxWlAHxTzl+",
+      "authorship_tag": "ABX9TyPuURweSJeKlXAgzmzuGOzi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,6 +22,16 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sub-rat/3-MONTHS-ON-MachineLearning/blob/master/Day2LinearRegression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pT5TbixgaGxX",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Data Preprocessing**"
       ]
     },
     {
@@ -48,6 +58,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZOvFg2NuaJim",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Fitting Simple Linear Regression Model to the training set**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "9ZO_gX6_OeVR",
@@ -63,6 +83,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3UrziT-DaOoI",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Predecting the Result**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "mZa1Q0whPX2u",
@@ -74,6 +104,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y99CGV7kaW8q",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Visualization**"
+      ]
     },
     {
       "cell_type": "code",
@@ -119,6 +159,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tpN2MJE2aUKu",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "16WGfNaXPetF",
@@ -160,19 +210,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oCkT_47-PiD9",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
