update Naive Bayes with Multiple Labels

--- a/NaiveBayes.ipynb
+++ b/NaiveBayes.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "NaiveBayes.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO8SfJ0OpvgWctFRdBfBWk5",
+      "authorship_tag": "ABX9TyNgPUeH6xlUS5qhH7m34B1m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -164,6 +164,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5MyBwQxmZGy2",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Generating Model and Prediction\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "KAJc7FwmSsZi",
@@ -194,9 +204,237 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "koOWcKiiZd-3",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Naive Bayes with Multiple Labels"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kYG-n5mCgUQg",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Importing wine data"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "0CmTX0VUTaqc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "0e5e7700-b80f-4441-e673-f282fc99b7d4"
+      },
+      "source": [
+        "from sklearn import datasets\n",
+        "wine = datasets.load_wine()\n",
+        "print(\"features:\", wine.feature_names)\n",
+        "print(\"target:\", wine.target_names)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "features: ['alcohol', 'malic_acid', 'ash', 'alcalinity_of_ash', 'magnesium', 'total_phenols', 'flavanoids', 'nonflavanoid_phenols', 'proanthocyanins', 'color_intensity', 'hue', 'od280/od315_of_diluted_wines', 'proline']\n",
+            "target: ['class_0' 'class_1' 'class_2']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "09_RjU5waQXX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0a72c888-5a77-4085-91d8-342b4cbf0bf3"
+      },
+      "source": [
+        "wine.data.shape"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(178, 13)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dndrzug9cJO1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "outputId": "548877db-6f66-4b49-8ee1-b17e057089ec"
+      },
+      "source": [
+        "print(wine.data[0:5])"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1.423e+01 1.710e+00 2.430e+00 1.560e+01 1.270e+02 2.800e+00 3.060e+00\n",
+            "  2.800e-01 2.290e+00 5.640e+00 1.040e+00 3.920e+00 1.065e+03]\n",
+            " [1.320e+01 1.780e+00 2.140e+00 1.120e+01 1.000e+02 2.650e+00 2.760e+00\n",
+            "  2.600e-01 1.280e+00 4.380e+00 1.050e+00 3.400e+00 1.050e+03]\n",
+            " [1.316e+01 2.360e+00 2.670e+00 1.860e+01 1.010e+02 2.800e+00 3.240e+00\n",
+            "  3.000e-01 2.810e+00 5.680e+00 1.030e+00 3.170e+00 1.185e+03]\n",
+            " [1.437e+01 1.950e+00 2.500e+00 1.680e+01 1.130e+02 3.850e+00 3.490e+00\n",
+            "  2.400e-01 2.180e+00 7.800e+00 8.600e-01 3.450e+00 1.480e+03]\n",
+            " [1.324e+01 2.590e+00 2.870e+00 2.100e+01 1.180e+02 2.800e+00 2.690e+00\n",
+            "  3.900e-01 1.820e+00 4.320e+00 1.040e+00 2.930e+00 7.350e+02]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-GlAE3d1cSxM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "df2a47d6-f3b5-4933-bff2-37d414e8ba86"
+      },
+      "source": [
+        "print(wine.target)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+            " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+            " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+            " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+            " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6zGkbdSYfjLF",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Splitting Data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yV7QPwtycbs2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(wine.data, wine.target, test_size=0.3,random_state=109) # 70% training and 30% tes"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yrUQF4gTflg5",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Model Generation and prediction"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GAqA0WWDd8mt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "nbays = GaussianNB()\n",
+        "nbays.fit(X_train, y_train)\n",
+        "y_pred = nbays.predict(X_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Hw2JwQR-fqJj",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Accuracy\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hErwyNy1efjU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "379fef57-6438-4555-e5fc-f7fe1a8d9284"
+      },
+      "source": [
+        "from sklearn import metrics\n",
+        "print(\"Accuracy:\" ,metrics.accuracy_score(y_test, y_pred))"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Accuracy: 0.9074074074074074\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7g2BIPv3fCk8",
         "colab_type": "code",
         "colab": {}
       },
