--- a/code/week6/CIFAR_10WithPyTorch.ipynb
+++ b/code/week6/CIFAR_10WithPyTorch.ipynb
@@ -6,7 +6,7 @@
       "name": "CIFAR-10WithPyTorch.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP6b6tV8l3olkrWKyShTUoa",
+      "authorship_tag": "ABX9TyOXxvHCzT+U3RAVsrGHHXFJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -282,6 +282,16 @@
       },
       "source": [
         "# Loading and normalizing CIFAR10"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JAAhnK7nq50H",
+        "colab_type": "text"
+      },
+      "source": [
+        "[reference](https://pytorch.org/tutorials/beginner/blitz/cifar10_tutorial.html#loading-and-normalizing-cifar10)"
       ]
     },
     {
